[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Ma Lu <luma26c@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
stable-baselines3 = "2.3.2"
torch = "2.2.2"
numpy = "1.26.4"
pygame = "^2.6.0"
gym = "^0.26.2"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

